[project]
name = "image-pipeblocks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.5.0+cu124",
    "torchvision==0.20.0+cu124",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.11.7",
    "pytorch-lightning>=2.5.2",
    "ultralytics>=8.3.115",
]

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "matplotlib>=3.10.3",
    "segmentation-models-pytorch>=0.5.0",
]

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
