[project]
name = "image-pipeblocks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch==2.4.1+cu124",
    "torchvision==0.19.1+cu124",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.10",
    "pytorch-lightning>=2.4",
    "ultralytics>=8.3.115",
]

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "matplotlib>=3.7.5",
    "segmentation-models-pytorch>=0.3.3",
]

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
